# madara

./: .all-contributorsrc  .artifact-versions.yml  .db-versions.yml  .dockerignore  .editorconfig  .env.e2e  .env.example  .env.test  .envrc  .gitignore  .gitmodules  .markdownlint.json  .markdownlintignore  .prettierignore  .yamllint.yml  AGENTS.md  BUILDING.md  CHANGELOG.md  Cargo.toml  Dockerfile  IMP.md  LICENSE  Makefile  Makefile.toml  README.md  RELEASE.md  RELEASE_NOTES_v0.10.0.md  UTILITIES_CLAUDE.md  bad_class_hash.tx  benchmark_persistence.sh  block_result.json  bootstrap_input.json  bootstrapper.dockerfile  cairo_requirements.txt  cat.txt  clippy.toml  compose.yaml  config.example.yaml  config.yaml.example  correct_class_hash.tx  (+30 more)
bootstrapper/: CLAUDE.md  Cargo.toml  Dockerfile  Readme.md  build.rs
bootstrapper-v2/: .env.example  CLAUDE.md  Cargo.toml  Dockerfile  README.md  SIERRA_1_7_0_UPGRADE.md  build.rs  redeploy-with-modern-erc20.sh  rust-toolchain.toml
bootstrapper-v2/configs/: config.json
bootstrapper-v2/contracts/ethereum/: .gitignore  foundry.toml
bootstrapper-v2/contracts/madara/: Scarb.toml
bootstrapper-v2/l2-factory/: Scarb.toml
bootstrapper-v2/l2-factory/src/: lib.cairo
bootstrapper-v2/output/: addresses.json  base_addresses.json  madara_addresses.json  madara_addresses_new.json  madara_addresses_v5.json
bootstrapper-v2/src/: config.rs  lib.rs  main.rs  utils.rs
bootstrapper-v2/src/cli/: mod.rs  setup_base.rs  setup_madara.rs
bootstrapper-v2/src/error/: madara.rs  mod.rs
bootstrapper/crates/: Readme.md
bootstrapper/crates/bootstrapper/: Cargo.toml
bootstrapper/data/: addresses.json
bootstrapper/src/: main.rs  transport.rs
bootstrapper/src/configs/: devnet.json
bootstrapper/src/contract_clients/: config.rs  core_contract.rs  eth_bridge.rs  legacy_class.rs  mod.rs  starknet_core_contract.rs  starknet_dev_core_contract.rs  token_bridge.rs  utils.rs
bootstrapper/src/contracts/: OpenZeppelinAccount.json  OpenZeppelinAccountCairoOne.casm.json  OpenZeppelinAccountCairoOne.sierra.json
bootstrapper/src/helpers/: account_actions.rs
bootstrapper/src/setup_scripts/: account_setup.rs  argent.rs  braavos.rs  core_contract.rs  erc20_bridge.rs  eth_bridge.rs  mod.rs  udc.rs  upgrade_eth_token.rs  upgrade_l1_bridge.rs  upgrade_l2_bridge.rs
bootstrapper/src/tests/: constants.rs  erc20_bridge.rs  eth_bridge.rs  mod.rs
bootstrapper/src/utils/: banner.rs  constants.rs  mod.rs
crates/blockgen/: Cargo.toml
crates/blockgen/src/: block.rs  block_state.rs  felt.rs  lib.rs  transaction.rs
crates/client/analytics/: Cargo.toml
crates/client/block_import/: Cargo.toml
crates/client/commitment-state-diff/: Cargo.toml
crates/client/db/: Cargo.toml  build.rs
crates/client/deoxys/: Cargo.toml
crates/client/devnet/: Cargo.toml  README.md  build.rs
crates/client/eth/: Cargo.toml  README.md
crates/client/exec/: Cargo.toml
crates/client/gateway/: Cargo.toml  out2.json  out_tmp.json
crates/client/genesis-data-provider/: Cargo.toml
crates/client/l1-messaging/: Cargo.toml  README.md
crates/client/mapping-sync/: Cargo.toml
crates/db-explorer/: Cargo.toml
crates/db-explorer/src/: main.rs
crates/deoxys-tui/: Cargo.toml  README.md  build.rs  rustfmt.toml
crates/deoxys-tui/src/: deoxys_ui.rs  lib.rs  logging.rs  radar.rs
crates/deoxys-tui/substrate/: modifier.sh
crates/node/: Cargo.toml  build.rs
crates/node/src/: benchmarking.rs  chain_spec.rs  cli.rs  cli2.rs  command.rs  configs.rs  constants.rs  genesis_block.rs  main.rs  service.rs  starknet.rs  util.rs  utils.rs
crates/orchestrator/: Cargo.toml
crates/orchestrator/src/: config.rs  constants.rs  lib.rs  main.rs  metrics.rs  routes.rs  telemetry.rs
crates/orchestrator/tests/: mod.rs
crates/proc-macros/: Cargo.toml
crates/proc-macros/src/: lib.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: config.rs  lib.rs  opaque.rs  pallets.rs  types.rs
crates/tests/: Cargo.toml  test_devnet.yaml
crates/tests/src/: devnet.rs  lib.rs  storage_proof.rs
crates/utils/: Cargo.toml
crates/utils/src/: env_utils.rs  http_client.rs  lib.rs
e2e/: .gitignore  CLAUDE.md  Cargo.toml  configmap.txt  todos.md
e2e-tests/: CLAUDE.md  Cargo.toml  test_samples.rs  tests.rs
e2e-tests/artifacts/contracts/: GPSVerifier.json  Starknet.json
e2e-tests/src/: anvil.rs  lib.rs  localstack.rs  mock_server.rs  mongodb.rs  node.rs  sharp.rs  starknet_client.rs  utils.rs
e2e/config/: bootstrapper.json  bootstrapper_v2.json  madara.yaml
e2e/data/: addresses.json  anvil.json
e2e/src/: constants.rs  lib.rs  mod.rs  setup.rs  test.rs
e2e/src/servers/: constants.rs  docker.rs  mod.rs  server.rs  testenv.rs
e2e/src/services/: constants.rs  (+4 more)
madara/: .prettierignore  CLAUDE.md  Cargo.toml  Dockerfile  build-and-push.sh  build-docker-amd64.sh  reorg_iden.sh  restart_madara.sh  restart_madara_testnet.sh  rust-toolchain  rustfmt.toml  test.sh  test_reorg.sh
madara/docs/: bonsai-trie-benchmarking-plan.md
madara/monitoring/: README.md  docker-compose.yml  otel-collector-config.yaml  prometheus.yml
madara/node/: Cargo.toml  build.rs
madara/scripts/: with-macos-sdk.sh
madara/src/: main.rs  submit_tx.rs  util.rs
orchestrator/: .dockerignore  .env.example  .env.test  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  GREEDY_MODE_TESTS.md  Makefile.toml  README.md  bouncer_weights_limit.example.json  build.rs  migrate-mongo-config.js  package-lock.json  package.json  promtail-config.yaml  run_resources_setup.sh  run_setup_resources.sh  storage_paths.md  tests.md
orchestrator/dashboards/: grafana_orchestrator_full_view.json
orchestrator/e2e-tests/: tests.rs
orchestrator/migrations/: 00000000000000-init.js  00000000000001-internal-id-to-long.js  00000000000002-add-orchestrator-version.js  00000000000002-tx-hashes-to-tx-hash.js  00000000000003-update-state-transition-job.js  00000000000004-add-block-batch-lookups.js  README.md  migrate_job_statuses.js
orchestrator/scripts/: db_migration.js  init_state.js
orchestrator/src/: lib.rs  main.rs
primitives/contract/: Cargo.toml
(+3647 files in other folders)
