[package]
name = "bootstrapper-v2"
authors.workspace = true
homepage.workspace = true
edition.workspace = true
repository.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
dotenvy = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
starknet = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true

[build-dependencies]
build-version.workspace = true
fs_extra = "1.3.0"
